[gd_scene load_steps=2 format=3 uid="uid://0esyp38ds6yg"]

[ext_resource type="Script" path="res://addons/admob/sample/Main.gd" id="1_u2yjc"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u2yjc")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 0
offset_right = 359.0
offset_bottom = 302.0
scale = Vector2(2, 2)

[node name="General" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/General"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -103.0
offset_right = 90.0
offset_bottom = 103.0
grow_horizontal = 2
grow_vertical = 2

[node name="GetInitializationStatus" type="Button" parent="TabContainer/General/VBoxContainer"]
layout_mode = 2
text = "GetInitializationStatus"

[node name="LoadBanner" type="Button" parent="TabContainer/General/VBoxContainer"]
layout_mode = 2
text = "LoadBanner"

[node name="DestroyBanner" type="Button" parent="TabContainer/General/VBoxContainer"]
layout_mode = 2
text = "DestroyBanner"

[node name="ShowBanner" type="Button" parent="TabContainer/General/VBoxContainer"]
layout_mode = 2
text = "ShowBanner"

[node name="HideBanner" type="Button" parent="TabContainer/General/VBoxContainer"]
layout_mode = 2
text = "HideBanner"

[node name="GetWidth" type="Button" parent="TabContainer/General/VBoxContainer"]
layout_mode = 2
text = "GetWidth"

[node name="UMP" type="TabBar" parent="TabContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/UMP"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -68.0
offset_right = 104.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2

[node name="GetConsentStatus" type="Button" parent="TabContainer/UMP/VBoxContainer"]
layout_mode = 2
text = "GetConsentStatus"

[node name="ResetConsentInformation" type="Button" parent="TabContainer/UMP/VBoxContainer"]
layout_mode = 2
text = "ResetConsentInformation"

[connection signal="pressed" from="TabContainer/General/VBoxContainer/GetInitializationStatus" to="." method="_on_get_initialization_status_pressed"]
[connection signal="pressed" from="TabContainer/General/VBoxContainer/LoadBanner" to="." method="_on_load_banner_pressed"]
[connection signal="pressed" from="TabContainer/General/VBoxContainer/DestroyBanner" to="." method="_on_destroy_banner_pressed"]
[connection signal="pressed" from="TabContainer/General/VBoxContainer/ShowBanner" to="." method="_on_show_banner_pressed"]
[connection signal="pressed" from="TabContainer/General/VBoxContainer/HideBanner" to="." method="_on_hide_banner_pressed"]
[connection signal="pressed" from="TabContainer/General/VBoxContainer/GetWidth" to="." method="_on_get_width_pressed"]
[connection signal="pressed" from="TabContainer/UMP/VBoxContainer/GetConsentStatus" to="." method="_on_get_consent_status_pressed"]
[connection signal="pressed" from="TabContainer/UMP/VBoxContainer/ResetConsentInformation" to="." method="_on_reset_consent_information_pressed"]
